# eecs498-001-project-point_clouds

./: .gitignore  PointCF.bc2  PointCloudFeature.bc1  PointCloudFeature.py  PointCloudFeature_old.p  PointSelector.py  README.md  Rt_param.py  b4.out  b5.out  b6.out  demo.py  icp.py  icp_backup.py.bac1  icp_pr.py  install.sh  main.py  pcloader.py  randomPC.py  sparsePC.py  test_PFH.py  test_icp.py
cpp/: CMakeLists.txt  pcd_load.cpp
data_pcd/: ism_train_cat.txt  ism_train_cat_source.npy  ism_train_cat_target.npy  ism_train_horse.txt  ism_train_horse_source.npy  ism_train_horse_target.npy  ism_train_wolf.txt  ism_train_wolf_source.npy  ism_train_wolf_target.npy
hw4/: icp_template.py  pca_template.py  pca_template_copy.py  pca_vs_ransac.py  ransac_template.py  utils.py
result/: cat_randomPC.txt  cat_ratio_0.01_dist_10.txt  cat_ratio_0.1_dist_0.1.txt  cat_ratio_0.1_dist_1.txt  cat_ratio_0.1_dist_10.txt  cat_ratio_0.1_dist_20.txt  cat_ratio_0.3_dist_10.txt  cat_ratio_0.5_dist_10.txt  cat_sparsePC.txt  cat_true_randomPC.txt  cat_without_k_means.txt  horse_randomPC.txt  horse_ratio_0.01_dist_10.txt  horse_ratio_0.1_dist_10.txt  horse_ratio_0.3_dist_0.1.txt  horse_ratio_0.3_dist_1.txt  horse_ratio_0.3_dist_10.txt  horse_ratio_0.3_dist_20.txt  horse_ratio_0.5_dist_10.txt  horse_sparsePC.txt  horse_true_randomPC.txt  horse_without_k_means.txt  wolf_randomPC.txt  wolf_ratio_0.01_dist_10.txt  wolf_ratio_0.1_dist_10.txt  wolf_ratio_0.3_dist_0.1.txt  wolf_ratio_0.3_dist_1.txt  wolf_ratio_0.3_dist_10.txt  wolf_ratio_0.3_dist_20.txt  wolf_ratio_0.5_dist_10.txt  wolf_sparsePC.txt  (+2 more)
